@@ -3,20 +3,14 @@
 <plist version="1.0">
 <dict>
 	<key>IBDocumentLocation</key>
-	<string>87 88 356 293 0 0 1280 1002 </string>
+	<string>63 56 356 293 0 0 1024 746 </string>
 	<key>IBEditorPositions</key>
 	<dict>
 		<key>29</key>
-		<string>338 779 357 44 0 0 1280 1002 </string>
+		<string>261 662 357 44 0 0 1024 746 </string>
 	</dict>
 	<key>IBFramework Version</key>
 	<string>291.0</string>
-	<key>IBOpenObjects</key>
-	<array>
-		<integer>29</integer>
-		<integer>387</integer>
-		<integer>533</integer>
-	</array>
 	<key>IBSystem Version</key>
 	<string>6G30</string>
 </dict>
