@@ -1,5 +1,5 @@
 // -*- mode:objc -*-
-// $Id: PTYTextView.h,v 1.13 2003-02-12 07:52:47 ujwal Exp $
+// $Id: PTYTextView.h,v 1.14 2003-02-13 16:29:41 yfabian Exp $
 //
 /*
  **  PTYTextView.h
@@ -56,11 +56,11 @@
     // dead key support
     NSEvent *deadKeyEvent;
     BOOL deadkey;
-
+    int	cursorIndex;
 }
 
 - (id)init;
-- (void) dealloc;
+- (void)dealloc;
 - (BOOL)shouldDrawInsertionPoint;
 - (void)drawRect:(NSRect)rect;
 - (void)keyDown:(NSEvent *)event;
@@ -78,6 +78,7 @@
 - (NSMenu *)menuForEvent:(NSEvent *)theEvent;
 - (void) browse:(id)sender;
 - (void) mail:(id)sender;
+- (void) setCursorIndex:(int)idx;
 
 
 // get/set methods
